--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ pytest = "^7.2.2"
 pytest-mock = "^3.10.0"
 mypy = "^0.991"
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.7.1"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
