--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ requests = "~2.31"
 pathlib = "^1.0.1"
 pyarrow = "^16.1.0"
 fastparquet = "^2024.5.0"
+seaborn = "^0.13.2"
+openpyxl = "^3.1.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.2"
