--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pyarrow = "^16.1.0"
 fastparquet = "^2024.5.0"
 seaborn = "^0.13.2"
 openpyxl = "^3.1.5"
+scikit-learn = "^1.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.2"
