--- a/ruff.toml
+++ b/ruff.toml
@@ -17,6 +17,7 @@ extend-select = [
     "COM", # flake8-commas
     # "DTZ", # flake8-datetimez
     "E",   # Error
+    "EXE", # flake8-executable
     "F",   # Pyflakes
     "I",   # isort
     "ICN", # flake8-import-conventions
@@ -50,7 +51,6 @@ ignore = [
     "E501",    # line-too-long
     "ISC001",  # single-line-implicit-string-concatenation
     "N806",    # non-lowercase-variable-in-function
-    "PD002",   # use-inplace
     "PLC1901", # compare-to-empty-string (preview)
     "PLR0402", # manual-from-import
     "PLR0911", # too-many-return-statements
@@ -62,12 +62,8 @@ ignore = [
     "Q000",    # bad-quotes-inline-string
     "RUF012",  # mutable-class-default
     "S106",    # hardcoded-password-func-arg
-    "S108",    # allow writing to tmp
-    "S113",    # Probable use of requests call without timeout
-    "SIM115",  # Use context handler for opening files
     "S311",    # suspicious-non-cryptographic-random-usage
     "S320",    # suspicious-xmle-tree-usage
-    "S324",    # Probable use of insecure hash functions in `hashlib`: `md5`
     "S603",    # subprocess-without-shell-equals-true
     "S607",    # start-process-with-partial-path
     "S701",    # jinja2-autoescape-false
