--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ seaborn = "^0.13.2"
 openpyxl = "^3.1.5"
 scikit-learn = "^1.5.1"
 jinja2 = "^3.1.4"
+tabulate = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.2"
