--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ openpyxl = "^3.1.5"
 scikit-learn = "^1.5.1"
 jinja2 = "^3.1.4"
 tabulate = "^0.9.0"
+geopandas = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.2"
