--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ exclude: |
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v5.0.0
     hooks:
       - id: check-ast
       - id: check-added-large-files
@@ -32,7 +32,7 @@ repos:
         files: \.(json|template)$
   # https://docs.astral.sh/ruff/integrations/#pre-commit
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.6.3
+    rev: v0.8.1
     hooks:
       # Run the linter
       - id: ruff
@@ -42,6 +42,14 @@ repos:
       - id: ruff-format
         types_or: [python, pyi, jupyter]
   - repo: https://github.com/kynan/nbstripout
-    rev: 0.7.1
+    rev: 0.8.1
     hooks:
       - id: nbstripout
+        types: [jupyter]
+  - repo: local
+    hooks:
+      - id: remove-version-metadata
+        name: remove version metadata from ipynb files
+        entry: python .pre-commit/remove_kernelspec.py
+        language: system
+        types: [jupyter]
