--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ fastparquet = "^2024.5.0"
 seaborn = "^0.13.2"
 openpyxl = "^3.1.5"
 scikit-learn = "^1.5.1"
+jinja2 = "^3.1.4"
+tabulate = "^0.9.0"
+geopandas = "^1.0.1"
+nbformat = "^5.10.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.2"
