--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ jinja2 = "^3.1.4"
 tabulate = "^0.9.0"
 geopandas = "^1.0.1"
 nbformat = "^5.10.4"
+nbconvert = "^7.16.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.2"
