--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "comstock-processor"
+name = "compare-building-data"
 version = "0.1.0"
-description = "A tool to download and process ComStock data."
-authors = ["Nicholas Long <nllong>"]
+description = "Compare results of ComStock, CBECS, and ASHRAE Std 100-2024."
+authors = ["Nicholas Long <nllong>", "Lauren Kerr <lkerrnrel>"]
 license = "BSD"
 
 [tool.poetry.dependencies]
@@ -19,13 +19,12 @@ jinja2 = "^3.1.4"
 tabulate = "^0.9.0"
 geopandas = "^1.0.1"
 nbformat = "^5.10.4"
+nbconvert = "^7.16.6"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.2.2"
 pytest-mock = "^3.10.0"
 mypy = "^0.991"
-
-[tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
 
 [build-system]
