--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ tabulate = "^0.9.0"
 geopandas = "^1.0.1"
 nbformat = "^5.10.4"
 nbconvert = "^7.16.6"
+jupyter = "^1.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.2"
