--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Compare results of ComStock, CBECS, and ASHRAE Std 100-2024."
 authors = ["Nicholas Long <nllong>", "Lauren Kerr <lkerrnrel>"]
 license = "BSD"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -20,6 +21,7 @@ tabulate = "^0.9.0"
 geopandas = "^1.0.1"
 nbformat = "^5.10.4"
 nbconvert = "^7.16.6"
+jupyter = "^1.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.2"
