--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,25 +1,25 @@
 version: 2
 updates:
-  - package-ecosystem: "pip"
-    directory: "/"
+  - package-ecosystem: 'pip'
+    directory: '/'
     schedule:
-      interval: "daily"
+      interval: 'daily'
     groups:
       dev-deps:
-        dependency-type: "development"
+        dependency-type: 'development'
       prod-deps:
-        dependency-type: "production"
+        dependency-type: 'production'
     open-pull-requests-limit: 5
     commit-message:
-      prefix: "deps"
-  - package-ecosystem: "github-actions"
-    directory: "/"
+      prefix: 'deps'
+  - package-ecosystem: 'github-actions'
+    directory: '/'
     schedule:
-      interval: "daily"
+      interval: 'daily'
     groups:
       actions-deps:
         patterns:
-          - "*"
+          - '*'
     open-pull-requests-limit: 5
     commit-message:
-      prefix: "ci"
+      prefix: 'ci'
