--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ geopandas = "^1.1.1"
 nbformat = "^5.10.4"
 nbconvert = "^7.16.6"
 jupyter = "^1.1.1"
+selenium = "^4.34.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
