--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,15 @@ jobs:
         uses: actions/setup-python@v6.0.0
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Checkout comstock_processor
+        uses: actions/checkout@v5
+        with:
+          repository: SEED-platform/comstock-processor
+          path: comstock_processor
+      - name: Move comstock-processor to expected location
+        run: |
+          mkdir -p ../
+          mv comstock_processor ../comstock_processor
       - name: Install Poetry
         run: |
           curl -sSL https://install.python-poetry.org | python -
@@ -61,7 +70,6 @@ jobs:
           if [[ "$RUNNER_OS" == "Windows" ]]; then
             export PATH="$HOME/.local/bin:/c/Users/runneradmin/AppData/Roaming/Python/Scripts:$PATH"
           fi
-          poetry run python comstock_processor.py
           poetry run jupyter nbconvert --to html --execute 2_analysis.ipynb --output test_output-${{ github.run_id }}.html
       - name: Upload HTML Artifact
         if: ${{ matrix.python-version == '3.12' && matrix.os == 'ubuntu-latest' }}
